# fotos

./: Cargo.toml  README.md  justfile
migrations/: V1__files.sql  V2_files.sql
src/: b3sum.rs  db.rs  error.rs  flags.rs  lib.rs  main.rs  walk.rs
