[package]
name = "fotos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
blake3 = "1.5.4"
chrono = "0.4.38"
infer = "0.16.0"
rayon = "1.10.0"
refinery = { version = "0.8.14", features = ["rusqlite"] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "backup"] }
thiserror = "2.0.3"
